--- a/src/components/LiveQuery/LiveQuery.scss
+++ b/src/components/LiveQuery/LiveQuery.scss
@@ -4,7 +4,7 @@
         width: 100%;
         height: 36px;
         border-radius: 5px;
-        padding-left: 0.5em;
+        padding-left: 1%;
         border: 1px solid #00000029;
     }
 
@@ -14,7 +14,7 @@
     }
 
     .dropList {
-
+        position: absolute;
         border: 1px solid #00000029;
         border-top: 0;
         border-bottom-left-radius: 5px;
@@ -23,7 +23,7 @@
         margin-top: 0;
         max-height: 150px;
         overflow-y: scroll;
-        width: 102%;
+        z-index: 100;
     }
 
     .query-result{
